syntax = "proto3";
import "google/protobuf/any.proto";

option csharp_namespace = "Sep3Blazor";

package BusinessServ;

// The greeting service definition.
service BusinessServer {
  // Sends a greeting
  rpc GetGroup (Request) returns (Reply);
  rpc GetNote (Request) returns (Reply);
  rpc PostGroup (Request) returns (Reply);
  rpc PostNote  (RegisterNoteRequest) returns (Reply);
  rpc DeleteNote (Request) returns (Reply);
  rpc DeleteGroup  (Request) returns (Reply);
  rpc RegisterUser(RegisterRequest) returns (RegisterReply);
  rpc ValidateUser(Request) returns (Reply);
  rpc GetInvitation(Request) returns (Reply);
  rpc PostInvitation(Request) returns (Reply);   
}

// The request message containing the user's name.
message Request {
  string name = 1;
  string type = 2;
}

// The response message containing the greetings.
message Reply {
  string message = 1;
  string type = 2;
}

// The request message containing the user's name.
message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
   string username = 3;
    string password = 4;
    
}
// The request message containing the user's name.
message RegisterReply {
string message=1;
  string firstName = 2;
  string lastName = 3;
   string username = 4;
    string password = 5;
}

message RegisterNoteRequest {
    int32 noteId = 3;
    int32 userId = 4;
    int32 groupId = 5;
    int32 week = 6;
    int32 year = 7;
    string name = 8;
    string status = 9;
    string text = 10;
}

message RegisterNoteReply {
    int32 noteId = 3;
    int32 userId = 4;
    int32 groupId = 5;
    int32 week = 6;
    int32 year = 7;
    string name = 8;
    string status = 9;
    string text = 10;
}